[package]
name = "anemo"
version = "0.0.0"
license = "Apache-2.0"
authors = [
    "Brandon Williams <brandon@mystenlabs.com>",
    "Francois Garillot <francois@mystenlabs.com>",
]
description = "a peer-to-peer networking library"
repository = "https://github.com/mystenlabs/mysten-infra"
edition = "2021"

[dependencies]
anyhow = "1.0.56"
backoff = { version = "0.4.0", features = ["tokio"] }
bincode = "1.3.3"
bytes = { version = "1.1.0", features = ["serde"] }
ed25519 = "1.4.0"
ed25519-dalek = "1.0.1"
futures = "0.3.21"
parking_lot = "0.12.0"
quinn = { version = "0.8.1", default-features = false, features = ["ring", "tls-rustls"] }
quinn-proto = "0.8.1"
rand = "0.7.3"
rccheck = { path = "../rccheck" }
rcgen = "0.9.2"
rustls = { version = "0.20.4", features = ["dangerous_configuration"] }
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["sync", "rt", "macros"] }
tokio-util = { version = "0.7.1", features = ["codec"] }
tower = { version = "0.4.12", features = ["full"] }
tracing = "0.1.32"
webpki = { version = "0.22.0", features = ["alloc", "std"] }
x509-parser = "0.13.0"

[dev-dependencies]
tracing-test = "0.2.1"
