[package]
name = "typed-store-derive"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Ade A. <ade@mystenlabs.com>"]
description = "macros for the typed-store crate"
repository = "https://github.com/mystenlabs/mysten-infra"
edition = "2021"
publish = ["crates-io"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.9"
syn = { version = "1.0.64", features = ["derive"] }

[dev-dependencies]
typed-store = { path = "../typed-store" }
